# rest-universal-task

./: .env  Dockerfile  LICENSE  Readme.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  rebuild_restapi.sh
app/api/: dependencies.py
app/api/routes/: api.py  base.py
app/api/routes/v1/: me.py  projects.py  register.py  tasks.py  token.py  trackers.py  users.py
app/common/: config.py  enums.py  errors.py  tasks.py
app/db/: base.py  base_class.py  models.py  session.py
app/db/controllers/: base.py  projects.py  tasks.py  tokens.py  trackers.py  users.py
app/db/migrations/: env.py
app/db/migrations/versions/: 22590d35f4b3_init.py  516ba6bbc933_inital.py  7517e4af0584_init.py
app/db/schemas/: base.py  project.py  task.py  token.py  tracker.py  user.py
server_utils/: api_model.py  cbv.py
tests/: conftest.py
tests/app/: test_main.py
